Added scrollToTop button, fixed darkmode for login and options, minor css tweaks, fixed misspelling

--- a/JensensWebApp/Views/Home/Index.cshtml
+++ b/JensensWebApp/Views/Home/Index.cshtml
@@ -41,7 +41,7 @@
 			<div class="Other-card">
 				<h5>@article.Title</h5>
 				<a href="@article.Link" target="_blank">Visa mer</a>
-				<p class="r">Publiserad: 2023/06/23</p>
+				<p class="r">Publicerad: 2023/06/23</p>
 			</div>
 		}
 		@*
