--- a/JensensWebApp/wwwroot/css/footer.css
+++ b/JensensWebApp/wwwroot/css/footer.css
@@ -1,6 +1,6 @@
 ﻿#footer-main {
     
-    border: solid 1px;
+    border-top: solid 1px;
     padding: 1rem;
     width: 100%;
     margin-top: auto;
