--- a/JensensWebApp/wwwroot/css/navbar.css
+++ b/JensensWebApp/wwwroot/css/navbar.css
@@ -6,6 +6,7 @@
     padding: 0 1rem 1rem 1rem;
     width: 100%;
     max-height: 10rem;
+    border-bottom: 1px solid;
 }
 .navbar-header {
     display: flex;
