--- a/JensensWebApp/wwwroot/css/optionsform.css
+++ b/JensensWebApp/wwwroot/css/optionsform.css
@@ -14,7 +14,7 @@
     background-color: #ffffff;
     margin: 10% auto;
     padding: 2rem;
-    border: 1px solid #ffffff;
+    border: 1px solid;
     width: 30%;
     border-radius: 0.3rem;
     box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
@@ -24,7 +24,6 @@
     .options-container header {
         font-size: 2rem;
         font-weight: bold;
-        color: #000000;
         margin-bottom: 1rem;
     }
 
@@ -34,36 +33,24 @@
 
     .options-container .label {
         font-size: 1.2rem;
-        color: #000000;
         margin-bottom: 0.3rem;
-    }
-
-    .options-container input[type="text"],
-    .options-container input[type="password"] {
-        width: 100%;
-        padding: 0.5rem;
-        border: 1px solid black;
-        border-radius: 0.3rem;
-        margin: 0;
     }
 
     .options-container button {
         width: 100%;
         padding: 0.5rem;
-        color: black;
-        background-color: white;
-        border: black solid 1px;
+        border: solid 1px;
         border-radius: 0.3rem;
         transition: background-color 0.3s ease;
     }
 
         .options-container button:hover {
-            background-color: black;
-            color: white;
+            background-color: inherit;
+            color: inherit;
         }
 
     .options-container a {
-        color: #000000;
+        color: inherit;
         text-decoration: none;
     }
 
