fixed naming adcycle v0.6

--- a/JensensWebApp/Views/Shared/_Layout.cshtml
+++ b/JensensWebApp/Views/Shared/_Layout.cshtml
@@ -118,14 +118,14 @@
                 </div>
 
             <div class="adBox">
-                <div class="ad" class="fade-effect">
+                <div class="ad">
                     <img id="adBanner1"/>
                 </div>
                 <div class="ad">
                     <video autoplay loop muted>
                     <source src="/images/the_two_faces_of_squidward_174.webm" type="video/webm" /></video>
                 </div>
-                <div class="ad" class="fade-effect">
+                <div class="ad">
                     <img id="adBanner2"/>
                 </div>
             </div>
