--- a/JensensWebApp/Views/Shared/_Layout.cshtml
+++ b/JensensWebApp/Views/Shared/_Layout.cshtml
@@ -56,6 +56,12 @@
                         <li class="nav-item">
                             <a id="nav-link-Optional" class="nav-link" href="#">Nöje</a>
                         </li>
+                        <li class="dropdown">
+                            <a href="#" class="drop-link">Väder</a>
+                            <div class="dropdown-content">
+                                <div id="forecast" class="forecast-container"></div>
+                            </div>
+                        </li>
                     </ul>
                </div>
            </div>
