--- a/JensensWebApp/wwwroot/css/navbar.css
+++ b/JensensWebApp/wwwroot/css/navbar.css
@@ -79,3 +79,64 @@
     border:none;
     text-decoration: underline;
 }
+.dropdown {
+    position: relative;
+    display: inline-block;
+    background-color: inherit;
+}
+
+.drop-link {
+    background-color: inherit;
+    color: #333;
+    padding: 10px 20px;
+    font-size: 16px;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    min-width: 160px;
+    z-index: 1;
+    background-color: #f9f9f9;
+    border-radius: 5px;
+    padding: 10px;
+}
+
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+
+.forecast-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    width: max-content;
+}
+
+.forecast-item {
+    width: 200px;
+    margin: 10px;
+    padding: 10px;
+    background-color: #f5f5f5;
+    border-radius: 5px;
+    text-align: center;
+}
+
+.day {
+    font-weight: bold;
+    font-size: 20px;
+    color: #333;
+}
+
+.temperature {
+    font-size: 16px;
+    color: #666;
+}
+
+.condition {
+    font-size: 14px;
+    color: #888;
+    margin-top: 10px;
+}
