--- a/JensensWebApp/Views/Shared/_Layout.cshtml
+++ b/JensensWebApp/Views/Shared/_Layout.cshtml
@@ -60,6 +60,8 @@
                             <a href="#" class="drop-link">Väder</a>
                             <div class="dropdown-content">
                                 <div id="forecast" class="forecast-container"></div>
+                                <div id="gps-info"></div>
+                                <script src="~/js/gps.js"></script>
                             </div>
                         </li>
                     </ul>
