--- a/JensensWebApp/wwwroot/css/leftpanel.css
+++ b/JensensWebApp/wwwroot/css/leftpanel.css
@@ -1,10 +1,11 @@
 ﻿.leftPanel {
     position: sticky;
-    top: 5rem;
+    top: 10%;
     margin-left: 5rem;
     align-items: center;
     min-width: 20rem;
     max-width: 40rem;
+    width:100%;
 }
 
 .searchBox {
