--- a/JensensWebApp/wwwroot/css/navbar.css
+++ b/JensensWebApp/wwwroot/css/navbar.css
@@ -7,17 +7,18 @@
     width: 100%;
     max-height: 10rem;
     border-bottom: 1px solid;
+    height:auto;
 }
 .navbar-header {
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 100%;
+    width: inherit;
 }
 .header-side-items {
     display: flex;
     justify-content: space-between;
-    width: 100%;
+    width: inherit;
 }
 .datetime {
     font-size: 20px;
@@ -28,7 +29,7 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
-    width: 100%;
+    width: inherit;
     list-style-type: none;
     padding-bottom: 15px;
 }
@@ -66,32 +67,18 @@
     filter:invert(1);
 }
 
-.weather-button-container{
-    
-
-}.weather-button-container button{
-    background-color: transparent;
-    color:inherit;
-    border:none;
-}
+.weather-button-container{}
+    .weather-button-container button {
+        display: flex;
+        flex-direction: column;
+        background-color: transparent;
+        color: inherit;
+        border: none;
+    }
 .weather-button-container button:hover{
     color:inherit;
     border:none;
     text-decoration: underline;
-}
-.dropdown {
-    position: relative;
-    display: inline-block;
-    background-color: inherit;
-}
-
-.drop-link {
-    background-color: inherit;
-    color: #333;
-    padding: 10px 20px;
-    font-size: 16px;
-    text-decoration: none;
-    cursor: pointer;
 }
 
 .dropdown-content {
