--- a/JensensWebApp/wwwroot/css/optionsform.css
+++ b/JensensWebApp/wwwroot/css/optionsform.css
@@ -57,3 +57,42 @@
         .options-container a:hover {
             text-decoration: underline;
         }
+
+.toggle-container {
+    position: relative;
+    width: 50px;
+    height: 25px;
+    margin-bottom: 20px;
+}
+
+.toggle-label {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 50px;
+    height: 25px;
+    background-color: #888;
+    cursor: pointer;
+    border-radius: 25px;
+    transition: background-color 0.3s ease;
+}
+
+    .toggle-label:before {
+        content: "";
+        position: absolute;
+        top: 2px;
+        left: 2px;
+        width: 21px;
+        height: 21px;
+        background-color: #fcfcfc;
+        border-radius: 50%;
+        transition: transform 0.3s ease;
+    }
+
+#toggle:checked + .toggle-label {
+    background-color: #55a;
+}
+
+    #toggle:checked + .toggle-label:before {
+        transform: translateX(25px);
+    }
