--- a/JensensWebApp/wwwroot/css/site.css
+++ b/JensensWebApp/wwwroot/css/site.css
@@ -64,7 +64,10 @@ html {
   min-height: 100%;
 }
 
-
+header {
+    margin-bottom: 1rem;
+    padding-bottom:1rem;
+}
 body {
     display: grid;
     grid-template-columns: 0 auto 0;
@@ -73,12 +76,13 @@ body {
         "header header header"
         ". main ."
         "footer footer footer";
-}
-
-body {
     background-color: #eee;
     color: #333;
     transition: background-color 0.3s ease;
+}
+
+body {
+    
 }
 
 a,li a {
@@ -92,45 +96,6 @@ a,li a {
   }
 
 
-.toggle-container {
-    position: relative;
-    width: 50px;
-    height: 25px;
-    margin-bottom: 20px;
-}
-
-.toggle-label {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 50px;
-    height: 25px;
-    background-color: #888;
-    cursor: pointer;
-    border-radius: 25px;
-    transition: background-color 0.3s ease;
-}
-
-.toggle-label:before {
-    content: "";
-    position: absolute;
-    top: 2px;
-    left: 2px;
-    width: 21px;
-    height: 21px;
-    background-color: #fcfcfc;
-    border-radius: 50%;
-    transition: transform 0.3s ease;
-}
-
-#toggle:checked + .toggle-label {
-    background-color: #55a;
-}
-
-#toggle:checked + .toggle-label:before {
-    transform: translateX(25px);
-}
-
 .returnToTop {
     position: sticky;
     bottom: 15%;
@@ -138,6 +103,7 @@ a,li a {
     width:4rem;
     padding-bottom: 1rem;
     z-index: 100;
+    opacity:0;
     transform: translateY(100px);
     transition: all .5s ease;
 }
