kopplat väder api, alla behöver dock en egen nyckel då de är begränsade i anv, ska funka men mina försök är slut atm

--- a/JensensWebApp/Views/Shared/_Layout.cshtml
+++ b/JensensWebApp/Views/Shared/_Layout.cshtml
@@ -26,7 +26,7 @@
                             <div class="datetime" id="datetime">@DateTime.Now.ToString("dd\\/MM\\/yyyy")</div>
                             <div id="weather" class="weather-button-container">
                                 <button id="weatherButton">
-                                    <img src="weather-current.webp" alt="Weather not found" id="condition"/>
+                                    <img src="~/images/weather/clear_day.svg" alt="WeatherImg not found" id="condition" />
                                     <div id="temperature">Temp:</div>
                                 </button>
                             </div>
